--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
     function getDefaultSteps() {
       const now = Date.now();
       return [
-        { id: now + 1, description: "Copy paste the question in GPT", completed: false },
-        { id: now + 2, description: "Humanise the content from GPT through <a href='https://www.humanizeai.pro' target='_blank'>www.humanizeai.pro</a>", completed: false },
-        { id: now + 3, description: "Edit the code in PDF, or convert PDF to docs or vice versa via <a href='https://www.ilovepdf.com' target='_blank'>https://www.ilovepdf.com</a>", completed: false },
-        { id: now + 4, description: "Submit your assignment", completed: false }
+        { id: now + 1, description: "Research and draft initial points using AI assistance", completed: false },
+        { id: now + 2, description: "Refine the draft for originality and style using a paraphrasing tool like <a href='https://www.humanizeai.pro' target='_blank'>www.humanizeai.pro</a>", completed: false },
+        { id: now + 3, description: "Format the document using tools like <a href='https://www.ilovepdf.com' target='_blank'>https://www.ilovepdf.com</a> for PDF conversion", completed: false },
+        { id: now + 4, description: "Final review and submission", completed: false }
       ];
     }
 
